# dao-core

./: CMakeLists.txt  README.md
dao-core-app/: index.html  styles.css
dao-core-app/scripts/: index.js
dao-core-app/scripts/components/: index.js
dao-core-app/scripts/components/allocation-component/: allocation-component.css  allocation-component.js
dao-core-app/scripts/components/claim-rewards-popup-component/: claim-rewards-popup-component.css  claim-rewards-popup-component.js
dao-core-app/scripts/components/deposit-popup-component/: deposit-popup-component.css  deposit-popup-component.js
dao-core-app/scripts/components/governance-component/: governance-component.css  governance-component.js
dao-core-app/scripts/components/public-key-popup-component/: public-key-popup-component.css  public-key-popup-component.js
dao-core-app/scripts/components/staking-component/: staking-component.css  staking-compontent.js
dao-core-app/scripts/components/withdraw-popup-component/: withdraw-popup-component.css  withdraw-popup-component.js
dao-core-app/scripts/consts/: consts.js
dao-core-app/scripts/libs/: utils.js
shaders/: CMakeLists.txt  app.cpp  app.wasm  contract.cpp  contract.h  contract.wasm  contract_sid.i
unittests/: CMakeLists.txt  shader_test.cpp
